--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zs</groupId>
-    <artifactId>spring</artifactId>
+    <artifactId>practice-spring</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -128,7 +128,7 @@
     </dependencies>
 
     <build>
-        <finalName>spring</finalName>
+        <finalName>practice-spring</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
