--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
-    <display-name>Spring</display-name>
+    <display-name>practice-spring</display-name>
 
     <!-- spring mongodb -->
     <context-param>
